src/main/java/generated/parse/openflow/OpenFlowGrammarParser.java
// Generated from /0/projects/internal/symnet-stuff/Symnetic/src/main/resources/openflow_grammar/OpenFlowGrammar.g4 by ANTLR 4.7
package generated.parse.openflow;

package generated.parse.openflow;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class OpenFlowGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		T__87=88, T__88=89, T__89=90, T__90=91, T__91=92, T__92=93, T__93=94, 
		T__94=95, T__95=96, T__96=97, T__97=98, T__98=99, T__99=100, T__100=101, 
		T__101=102, T__102=103, T__103=104, T__104=105, T__105=106, T__106=107, 
		T__107=108, T__108=109, T__109=110, T__110=111, T__111=112, T__112=113, 
		T__113=114, T__114=115, T__115=116, T__116=117, T__117=118, T__118=119, 
		T__119=120, T__120=121, T__121=122, T__122=123, T__123=124, T__124=125, 
		T__125=126, T__126=127, T__127=128, T__128=129, T__129=130, T__130=131, 
		T__131=132, T__132=133, T__133=134, T__134=135, T__135=136, T__136=137, 
		T__137=138, T__138=139, T__139=140, T__140=141, T__141=142, T__142=143, 
		T__143=144, T__144=145, T__145=146, T__146=147, T__147=148, T__148=149, 
		T__149=150, T__150=151, T__151=152, T__152=153, T__153=154, T__154=155, 
		T__155=156, T__156=157, T__157=158, T__158=159, T__159=160, T__160=161, 
		HEADLINE=162, Seconds=163, IP=164, IP6=165, MAC=166, NUMBER=167, INT=168, 
		NAME=169, WS=170, NL=171, EQUALS=172, HEX_DIGIT=173;
	public static final int
		RULE_flows = 0, RULE_flow = 1, RULE_matches = 2, RULE_matchField = 3, 
		RULE_varName = 4, RULE_fieldName = 5, RULE_value = 6, RULE_flowMetadata = 7, 
		RULE_match = 8, RULE_action = 9, RULE_actionset = 10, RULE_ipv6 = 11, 
		RULE_ctrlParam = 12, RULE_reason = 13, RULE_port = 14, RULE_nxm_reg = 15, 
		RULE_target = 16, RULE_argument = 17, RULE_field = 18, RULE_timeoutParam = 19, 
		RULE_sampleParam = 20, RULE_frag_type = 21, RULE_mask = 22;
	public static final String[] ruleNames = {
		"flows", "flow", "matches", "matchField", "varName", "fieldName", "value", 
		"flowMetadata", "match", "action", "actionset", "ipv6", "ctrlParam", "reason", 
		"port", "nxm_reg", "target", "argument", "field", "timeoutParam", "sampleParam", 
		"frag_type", "mask"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'/'", "'['", "'..'", "']'", "'in_port'", "'dl_vlan'", "'dl_vlan_pcp'", 
		"'dl_src'", "'dl_dst'", "'dl_type'", "'nw_src'", "'nw_dst'", "'nw_proto'", 
		"'nw_tos'", "'nw_ecn'", "'nw_ttl'", "'tp_src'", "'tp_dst'", "'icmp_type'", 
		"'icmp_code'", "'metadata'", "'ip'", "'icmp'", "'tcp'", "'udp'", "'sctp'", 
		"'arp'", "'rarp'", "'vlan_tci'", "'ip_frag'", "'arp_sha'", "'arp_tha'", 
		"'arp_spa'", "'ipv6_src'", "'ipv6_dst'", "'ipv6_label'", "'nd_target'", 
		"'nd_sll'", "'nd_tll'", "'tun_id'", "'tun_src'", "'tun_dst'", "'regidx'", 
		"'pkt_mark'", "'ipv6'", "'tcp6'", "'udp6'", "'sctp6'", "'icmp6'", "'send_flow_rem'", 
		"'check_overlap'", "'out_port'", "'idle_timeout'", "'hard_timeout'", "'table'", 
		"'cookie'", "'priority'", "'duration'", "'n_packets'", "'n_bytes'", "'hard_age'", 
		"'idle_age'", "'actions'", "':'", "'max_len'", "'reason'", "'id'", "'action'", 
		"'no_match'", "'invalid_ttl'", "'LOCAL'", "'CONTROLLER'", "'ALL'", "'NORMAL'", 
		"'FLOOD'", "'NXM_OF_IN_PORT'", "'NXM_OF_ETH_DST'", "'NXM_OF_ETH_SRC'", 
		"'NXM_OF_ETH_TYPE'", "'NXM_OF_VLAN_TCI'", "'NXM_OF_IP_TOS'", "'NXM_OF_IP_PROTO'", 
		"'NXM_OF_IP_SRC'", "'NXM_OF_IP_DST'", "'NXM_OF_TCP_SRC'", "'NXM_OF_TCP_DST'", 
		"'NXM_OF_UDP_SRC'", "'NXM_OF_UDP_DST'", "'NXM_OF_ICMP_TYPE'", "'NXM_OF_ICMP_CODE'", 
		"'NXM_OF_ARP_OP'", "'NXM_OF_ARP_SPA'", "'NXM_OF_ARP_TPA'", "'NXM_NX_TUN_ID'", 
		"'NXM_NX_ARP_SHA'", "'NXM_NX_ARP_THA'", "'NXM_NX_ICMPV6_TYPE'", "'NXM_NX_ICMPV6_CODE'", 
		"'NXM_NX_ND_SLL'", "'NXM_NX_ND_TLL'", "'NXM_NX_REG'", "'output:'", "'enqueue:'", 
		"'normal'", "'flood'", "'all'", "'controller('", "')'", "'controller'", 
		"'controller:'", "'local'", "'drop'", "'mod_vlan_vid:'", "'mod_vlan_pcp:'", 
		"'strip_vlan'", "'push_vlan:'", "'push_mpls:'", "'pop_mpls:'", "'mod_dl_src:'", 
		"'mod_dl_dst:'", "'mod_nw_src:'", "'mod_nw_dst:'", "'mod_tp_src:'", "'mod_tp_dst:'", 
		"'mod_nw_tos:'", "'resubmit:'", "'resubmit(,'", "'resubmit('", "'set_tunnel:'", 
		"'set_tunnel64:'", "'set_queue:'", "'pop_queue'", "'dec_ttl'", "'('", 
		"'set_mpls_ttl:'", "'dec_mpls_ttl'", "'move:'", "'->'", "'load:'", "'push:'", 
		"'pop:'", "'set_field:'", "'apply_actions('", "'clear_actions'", "'write_metadata:'", 
		"'goto_table:'", "'fin_timeout('", "'sample('", "'learn'", "'exit'", "'fin_idle_timeout'", 
		"'fin_hard_timeout'", "'probability'", "'collector_set_id'", "'obs_domain_id'", 
		"'obs_point_id'", "'no'", "'yes'", "'first'", "'later'", "'not_later'", 
		null, null, null, null, null, null, null, null, null, null, "'='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "HEADLINE", "Seconds", "IP", "IP6", 
		"MAC", "NUMBER", "INT", "NAME", "WS", "NL", "EQUALS", "HEX_DIGIT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "OpenFlowGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public OpenFlowGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FlowsContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(OpenFlowGrammarParser.EOF, 0); }
		public TerminalNode HEADLINE() { return getToken(OpenFlowGrammarParser.HEADLINE, 0); }
		public List<FlowContext> flow() {
			return getRuleContexts(FlowContext.class);
		}
		public FlowContext flow(int i) {
			return getRuleContext(FlowContext.class,i);
		}
		public FlowsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_flows; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OpenFlowGrammarListener ) ((OpenFlowGrammarListener)listener).enterFlows(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OpenFlowGrammarListener ) ((OpenFlowGrammarListener)listener).exitFlows(this);
		}
	}

	public final FlowsContext flows() throws RecognitionException {
		FlowsContext _localctx = new FlowsContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_flows);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==HEADLINE) {
				{
				setState(46);
				match(HEADLINE);
				}
			}

			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << T__34) | (1L << T__35) | (1L << T__36) | (1L << T__37) | (1L << T__38) | (1L << T__39) | (1L << T__40) | (1L << T__41) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45) | (1L << T__46) | (1L << T__47) | (1L << T__48) | (1L << T__49) | (1L << T__50) | (1L << T__51) | (1L << T__52) | (1L << T__53) | (1L << T__54) | (1L << T__55) | (1L << T__56) | (1L << T__57) | (1L << T__58) | (1L << T__59) | (1L << T__60) | (1L << T__61) | (1L << T__62))) != 0) || ((((_la - 76)) & ~0x3f) == 0 && ((1L << (_la - 76)) & ((1L << (T__75 - 76)) | (1L << (T__76 - 76)) | (1L << (T__77 - 76)) | (1L << (T__78 - 76)) | (1L << (T__79 - 76)) | (1L << (T__80 - 76)) | (1L << (T__81 - 76)) | (1L << (T__82 - 76)) | (1L << (T__83 - 76)) | (1L << (T__84 - 76)) | (1L << (T__85 - 76)) | (1L << (T__86 - 76)) | (1L << (T__87 - 76)) | (1L << (T__88 - 76)) | (1L << (T__89 - 76)) | (1L << (T__90 - 76)) | (1L << (T__91 - 76)) | (1L << (T__92 - 76)) | (1L << (T__93 - 76)) | (1L << (T__94 - 76)) | (1L << (T__95 - 76)) | (1L << (T__96 - 76)) | (1L << (T__97 - 76)) | (1L << (T__98 - 76)) | (1L << (T__99 - 76)) | (1L << (T__100 - 76)))) != 0) || _la==NL) {
				{
				{
				setState(49);
				flow();
				}
				}
				setState(54);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(55);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FlowContext extends ParserRuleContext {
		public MatchesContext matches() {
			return getRuleContext(MatchesContext.class,0);
		}
		public TerminalNode NL() { return getToken(OpenFlowGrammarParser.NL, 0); }
		public FlowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_flow; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OpenFlowGrammarListener ) ((OpenFlowGrammarListener)listener).enterFlow(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OpenFlowGrammarListener ) ((OpenFlowGrammarListener)listener).exitFlow(this);
		}
	}

	public final FlowContext flow() throws RecognitionException {
		FlowContext _localctx = new FlowContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_flow);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			matches();
			setState(58);
			match(NL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MatchesContext extends ParserRuleContext {
		public List<MatchContext> match() {
			return getRuleContexts(MatchContext.class);
		}
		public MatchContext match(int i) {
			return getRuleContext(MatchContext.class,i);
		}
		public MatchesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matches; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OpenFlowGrammarListener ) ((OpenFlowGrammarListener)listener).enterMatches(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OpenFlowGrammarListener ) ((OpenFlowGrammarListener)listener).exitMatches(this);
		}
	}

	public final MatchesContext matches() throws RecognitionException {
		MatchesContext _localctx = new MatchesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_matches);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(60);
				match();
				}
				break;
			}
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << T__34) | (1L << T__35) | (1L << T__36) | (1L << T__37) | (1L << T__38) | (1L << T__39) | (1L << T__40) | (1L << T__41) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45) | (1L << T__46) | (1L << T__47) | (1L << T__48) | (1L << T__49) | (1L << T__50) | (1L << T__51) | (1L << T__52) | (1L << T__53) | (1L << T__54) | (1L << T__55) | (1L << T__56) | (1L << T__57) | (1L << T__58) | (1L << T__59) | (1L << T__60) | (1L << T__61) | (1L << T__62))) != 0) || ((((_la - 76)) & ~0x3f) == 0 && ((1L << (_la - 76)) & ((1L << (T__75 - 76)) | (1L << (T__76 - 76)) | (1L << (T__77 - 76)) | (1L << (T__78 - 76)) | (1L << (T__79 - 76)) | (1L << (T__80 - 76)) | (1L << (T__81 - 76)) | (1L << (T__82 - 76)) | (1L << (T__83 - 76)) | (1L << (T__84 - 76)) | (1L << (T__85 - 76)) | (1L << (T__86 - 76)) | (1L << (T__87 - 76)) | (1L << (T__88 - 76)) | (1L << (T__89 - 76)) | (1L << (T__90 - 76)) | (1L << (T__91 - 76)) | (1L << (T__92 - 76)) | (1L << (T__93 - 76)) | (1L << (T__94 - 76)) | (1L << (T__95 - 76)) | (1L << (T__96 - 76)) | (1L << (T__97 - 76)) | (1L << (T__98 - 76)) | (1L << (T__99 - 76)) | (1L << (T__100 - 76)))) != 0)) {
				{
				{
				setState(63);
				match();
				}
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MatchFieldContext extends ParserRuleContext {
		public VarNameContext varName() {
			return getRuleContext(VarNameContext.class,0);
		}
		public TerminalNode EQUALS() { return getToken(OpenFlowGrammarParser.EQUALS, 0); }
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public MatchFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matchField; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OpenFlowGrammarListener ) ((OpenFlowGrammarListener)listener).enterMatchField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OpenFlowGrammarListener ) ((OpenFlowGrammarListener)listener).exitMatchField(this);
		}
	}

	public final MatchFieldContext matchField() throws RecognitionException {
		MatchFieldContext _localctx = new MatchFieldContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_matchField);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			varName();
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EQUALS) {
				{
				setState(70);
				match(EQUALS);
				setState(71);
				value();
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(72);
					match(T__0);
					setState(73);
					value();
					}
				}

				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarNameContext extends ParserRuleContext {
		public FieldNameContext fieldName() {
			return getRuleContext(FieldNameContext.class,0);
		}
		public List<TerminalNode> NUMBER() { return getTokens(OpenFlowGrammarParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(OpenFlowGrammarParser.NUMBER, i);
		}
		public VarNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OpenFlowGrammarListener ) ((OpenFlowGrammarListener)listener).enterVarName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OpenFlowGrammarListener ) ((OpenFlowGrammarListener)listener).exitVarName(this);
		}
	}

	public final VarNameContext varName() throws RecognitionException {
		VarNameContext _localctx = new VarNameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_varName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			fieldName();
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(79);
				match(T__1);
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NUMBER) {
					{
					setState(80);
					match(NUMBER);
					setState(81);
					match(T__2);
					setState(82);
					match(NUMBER);
					}
				}

				setState(85);
				match(T__3);
				}
			}
